Fixed login page so the forgot your password link would not move when the bottom of the screen came above the login button (when developer tab is open or on mobile when the keyboard shows up)

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -74,7 +74,7 @@ $darkgrey: rgb(40,40,40);
 body {
 
 	background-color: $darkgrey;
-	background: image-url("bg.jpg") no-repeat center top fixed;
+	background: image-url("bg.jpg") no-repeat center center fixed;
 	@include bgcover();
 	color: white;
 	text-align: center;
